# docqa

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/: document_processor.py  main.py  qa_system.py  utils.py
